# OS

./: .gitignore  .gitmodules  README.md
Colloc1/: CMakeLists.txt  theory.txt
Colloc1/dependencies/: task2m.h  task3m.h
Colloc1/tasks/: task1.cpp  task1m.h  task2.cpp  task3.cpp
Colloc1/tests/: tests_task1.cpp  tests_task2.cpp  tests_task3.cpp
ToDoList/: .gitignore  pom.xml
ToDoList/src/main/java/com/staniskhan/todolist/: ToDoListApplication.java
ToDoList/src/main/java/com/staniskhan/todolist/tasks/: Task.java  TaskController.java  TaskRepository.java  TaskService.java
ToDoList/src/main/resources/: application.properties
ToDoList/src/test/java/com/staniskhan/todolist/: ToDoListApplicationTests.java
lab1/: CMakeLists.txt  Creator.cpp  Main.cpp  Reporter.cpp
lab2/: CMakeLists.txt
lab2/src/: ThreadsWinAPI.h  lab2Thread.cpp  lab2WinAPI.cpp
lab2/tests/: test_lab2.cpp
lab3/: CMakeLists.txt
lab3/include/: header.h
lab3/includes/: functions.h
lab3/src/: Main.cpp  MainThread.cpp  functions.cpp
lab3/tests/: Tests.cpp
lab4/: CMakeLists.txt
lab4/includes/: Functions.h
lab4/src/: Receiver.cpp  Sender.cpp
lab4/tests/: test.cpp
lab5/: CMakeLists.txt
lab5/src/: Client.cpp  Server.cpp
lab5/tests/: CMakeLists.txt  Header.h  functions.cpp  test.cpp
tasks_conditions/: Коллоквиум1.txt
